--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.1",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux-thunk": "^2.4.1",
